:lipstick: Design(signup): 회원가입 form UI 추가
related to: #156

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,3 +67,13 @@
     @apply bg-background text-foreground;
   }
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+/* Firefox */
+input[type='number'] {
+  appearance: textfield;
+}
